# bcr-relay

./: Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: build-push.yml  deploy.yml  rust.yml  test.yml
data/: data.mdb  lock.mdb
src/: main.rs  rate_limit.rs  relay.rs  util.rs
src/blossom/: file_store.rs  mod.rs
src/db/: mod.rs
src/notification/: mod.rs  notification_store.rs  preferences.rs  template.rs
src/notification/email/: mailjet.rs  mod.rs  template.rs
src/proxy/: mod.rs
