[package]
name = "bcr-relay"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
nostr-sdk = { git = "https://github.com/BitcreditProtocol/nostr.git", features = [
  "nip59",
] }
nostr = { git = "https://github.com/BitcreditProtocol/nostr.git" }
nostr-relay-builder = { git = "https://github.com/BitcreditProtocol/nostr.git", branch = "sqldb" }
nostr-sqldb = { git = "https://github.com/BitcreditProtocol/nostr.git", branch = "sqldb", features = [
  "postgres",
] }
tokio = "1.45.1"
axum = { version = "0.8.3", features = ["ws", "tokio"] }
axum-raw-websocket = { git = "https://github.com/tompro/axum-raw-websocket.git" }
anyhow = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.6", features = ["cors"] }
clap = { version = "4.5.39", features = ["derive", "env"] }
chrono = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
hex = { version = "0.4" }
rand = { version = "0.8" }
url = { version = "2.5" }
email_address = "0.2"
bitflags = "2.9"
reqwest = { version = "0.12", default-features = false, features = ["default", "json"] }
base64 = "0.22"
