[package]
name = "bcr-relay"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
nostr-sdk = { version = "0.43", features = ["nip59"] }
nostr = "0.43"
nostr-relay-builder = "0.43"
nostr-postgres-db = { git = "https://github.com/BitcreditProtocol/nostr-postgres-db.git", rev = "2cb4c64" }
tokio = "1.45.1"
axum = { version = "0.8.3", features = ["ws", "tokio"] }
axum-extra = { version = "0.10", features = ["form"] }
axum-raw-websocket = "0.8"
anyhow = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
clap = { version = "4.5.39", features = ["derive", "env"] }
chrono = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
hex = { version = "0.4" }
rand = { version = "0.9" }
url = { version = "2.5" }
email_address = "0.2"
bitflags = "2.9"
reqwest = { version = "0.12", default-features = false, features = [
  "default",
  "json",
] }
base64 = "0.22"
tinytemplate = "1.2"
borsh = "1.5"
borsh-derive = "1.5"
ipnet = "2.11"
hickory-resolver = "0.25"
