[package]
name = "bcr-relay"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8.3", features = ["ws", "tokio"] }
axum-raw-websocket = "0.8"
chrono = "0.4"
clap = { version = "4.5.39", features = ["derive", "env"] }
deadpool-postgres = "0.14"
nostr = "0.44"
nostr-relay-builder = "0.44"
nostr-postgres-db = { git = "https://github.com/BitcreditProtocol/nostr-postgres-db.git", rev = "a8dbc8e" }
serde = { version = "1", features = ["derive"] }
tokio = "1.45.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
